fixed too big

--- a/home/styles.css
+++ b/home/styles.css
@@ -11,14 +11,13 @@ body {
 }
 
 .logo {
-    transition: all 0.2s;
+    transition: size 0.25s;
     max-width: 200px;
     margin-bottom: 20px;
 }
 
 .logo:hover {
-    size: 120%;
-
+    size: 105%;
     
 }
 
